# nfd2nfc

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md
.github/: formula-template.rb
.github/app-template/: Info.plist
.github/workflows/: ci.yml  release.yml
docs/: DEV-ENV-SETUP.md  DEVELOPMENT.md  README.ko.md  RELEASING.md
nfd2nfc/: Cargo.toml
nfd2nfc-common/: Cargo.toml
nfd2nfc-common/src/: config.rs  constants.rs  lib.rs  utils.rs
nfd2nfc-core/: Cargo.toml
nfd2nfc-core/src/: config.rs  constants.rs  lib.rs  logger.rs  normalizer.rs  utils.rs
nfd2nfc-watcher/: Cargo.toml
nfd2nfc-watcher/src/: config.rs  handler.rs  main.rs  watcher.rs
nfd2nfc/src/: cli.rs  daemon_controller.rs  log_service.rs  main.rs  normalizer.rs  version.rs
nfd2nfc/src/tui/: component.rs  dir_browser.rs  mod.rs  shortcuts.rs  styles.rs  text_util.rs  tick_timer.rs  toast.rs
nfd2nfc/src/tui/app/: events.rs  mod.rs  render.rs  state.rs
nfd2nfc/src/tui/tabs/: mod.rs
nfd2nfc/src/tui/tabs/browser/: events.rs  mod.rs  render.rs  state.rs
nfd2nfc/src/tui/tabs/config/: events.rs  mod.rs  render.rs  state.rs
nfd2nfc/src/tui/tabs/config/modal/: events.rs  mod.rs  render.rs  state.rs
nfd2nfc/src/tui/tabs/home/: events.rs  mod.rs  render.rs  state.rs
nfd2nfc/src/tui/tabs/logs/: events.rs  mod.rs  render.rs  state.rs
src/: logger.rs  main.rs
tools/: generate_test_data.py
