[workspace]
members = ["nfd2nfc", "nfd2nfc-common", "nfd2nfc-watcher"]
resolver = "2"

[workspace.package]
version = "1.0.0"

[workspace.dependencies]
anstyle = "1.0.10"
chrono = "0.4.39"
clap = { version = "4.5.27", features = ["derive"] }
fern = "0.7.1"
log = "0.4.25"
notify = "8.0.0"
oslog = "0.2.0"
rayon = "1.10.0"
toml = "0.8.20"
unicode-normalization = "0.1.24"
serde = { version = "1.0.217", features = ["derive"] }
dirs = "6.0.0"
once_cell = "1.20.3"
tokio = { version = "1.40.0", features = ["full"] }
thiserror = "2.0.11"
serde_json = "1.0.138"
