[workspace]
members = ["nfd2nfc", "nfd2nfc-core", "nfd2nfc-watcher"]
resolver = "2"

[workspace.package]
version = "2.0.1"

[workspace.dependencies]
anstyle = "1.0"
clap = { version = "4.5", features = ["derive"] }
fern = "0.7"
libc = "0.2"
log = "0.4"
notify = "8.2"
oslog = "0.2"
rayon = "1.11"
toml = "0.9"
unicode-normalization = "0.1"
serde = { version = "1.0", features = ["derive"] }
dirs = "6.0"
once_cell = "1.21"
tokio = { version = "1.49", features = ["full"] }
thiserror = "2.0"
serde_json = "1.0"
tempfile = "3.10"
strum = { version = "0.27", features = ["derive"] }
chrono = "0.4"
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
ratatui = "0.30"
unicode-width = "0.2"
