[package]
name = "nfd2nfc-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
notify = { workspace = true }
toml = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true }
unicode-normalization = { workspace = true }
log = { workspace = true }
nfd2nfc-common = { path = "../nfd2nfc-common" }
