[package]
name = "nfd2nfc"
version = { workspace = true }
edition = "2021"

[dependencies]
rayon = { workspace = true }
log = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
unicode-normalization = { workspace = true }
anstyle = { workspace = true }
once_cell = { workspace = true }
nfd2nfc-common = { path = "../nfd2nfc-common" }
