[package]
name = "nfd2nfc"
version = { workspace = true }
edition = "2021"

[dependencies]
crossterm = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
nfd2nfc-core = { path = "../nfd2nfc-core" }
ratatui = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
unicode-normalization = { workspace = true }
strum = { workspace = true }
unicode-width = { workspace = true }
